Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -652,5 +652,5 @@
   "dn34:2.1.204": "With the transcendence of the sphere of no possessions altogether, one attains and dwells in the sphere of neither perception nor non perception.",
   "dn34:2.1.205": "This is the seventh liberation.",
   "dn34:2.1.206": "With the transcendence of the sphere of neither perception nor non perception altogether, one attains and dwells in the cessation of perception and feeling. (XXXCAN I TRANSLATE \"vedayita\" AS \"feeling\" EVEN THOUGH IT'S A PP?XXX)",
-  "dn34:2.1.207": "This is the second liberation."
+  "dn34:2.1.207": "This is the eight liberation."
 }
