Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -654,5 +654,6 @@
   "dn34:2.1.206": "With the transcendence of the sphere of neither perception nor non perception altogether, one attains and dwells in the cessation of perception and feeling. (XXXCAN I TRANSLATE \"vedayita\" AS \"feeling\" EVEN THOUGH IT'S A PP?XXX)",
   "dn34:2.1.207": "This is the eight liberation.",
   "dn34:2.1.208": "These are the eight things that are to be seen for oneself.",
-  "dn34:2.1.209": "These eighty things which have been rightly and fully enlightened to thus by the Such-Attained One are true, real, just so, not false, and not otherwise."
+  "dn34:2.1.209": "These eighty things which have been rightly and fully enlightened to thus by the Such-Attained One are true, real, just so, not false, and not otherwise.",
+  "dn34:2.2.0": "9. Nines"
 }
