--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -656,5 +656,6 @@
   "dn34:2.1.208": "These are the eight things that are to be seen for oneself.",
   "dn34:2.1.209": "These eighty things which have been rightly and fully enlightened to thus by the Such-Attained One are true, real, just so, not false, and not otherwise.",
   "dn34:2.2.0": "9. Nines",
-  "dn34:2.2.1": "There are nine things that are of great help; nine things that are to be cultivated; nine things that are to be understood accurately; nine things that are to be abandoned; nine things that lead to backsliding; nine things that lead to accomplishment; nine things that are hard to penetrate; nine things that are to be encouraged; nine things that are to be understood fully; nine things that are to be seen for oneself."
+  "dn34:2.2.1": "There are nine things that are of great help; nine things that are to be cultivated; nine things that are to be understood accurately; nine things that are to be abandoned; nine things that lead to backsliding; nine things that lead to accomplishment; nine things that are hard to penetrate; nine things that are to be encouraged; nine things that are to be understood fully; nine things that are to be seen for oneself.",
+  "dn34:2.2.2": "What are the nine things that are of great help?"
 }
