--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -85,7 +85,7 @@
   "mn10:31.2": "Jis stebi kūne kilimo prigimtį, arba stebi kūne nykimo prigimtį, arba stebi kūne ir kilimo, ir nykimo prigimtį.",
   "mn10:31.3": "Arba jame yra įtvirtinta atida: „Yra kūnas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:31.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną.",
-  "mn10:32.0": "Jausmo tonų kontempliacija",
+  "mn10:32.0": "2. Jausmo tonų kontempliacija",
   "mn10:32.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas jausmo tonus kaip jausmo tonus?",
   "mn10:32.2": "Štai, vienuoliai, vienuolis, jausdamas malonų jausmo toną, supranta: „Jaučiu malonų jausmo toną”, –",
   "mn10:32.3": "jausdamas nemalonų jausmo toną, supranta: „Jaučiu nemalonų jausmo toną“, –",
