--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -97,5 +97,6 @@
   "mn7:19.1": "Tuo gi pat metu netoli Palaimintojo sėdėjo brahmanas Sundarika Bhāradvāja. ",
   "mn7:19.2": "Ir štai brahmanas Sundarika Bhāradvāja pasakė Palaimintajam:",
   "mn7:19.3": "„Bet ar gerbiamas Gotama eina į Bāhukos upę praustis?”",
-  "mn7:19.4": "„Kas iš Bāhukos upės, brahmanai?”"
+  "mn7:19.4": "„Kas iš Bāhukos upės, brahmanai?”",
+  "mn7:19.5": "„Ką Bāhukos upė padarys?”"
 }
