Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -102,6 +102,7 @@
   "mn7:19.6": "„Gerbiamas Gotama, daugelis žmonių laiko Bāhukos upę apvalančia, nuopelninga. Daug žmonių nuplauna savo blogus darbus Bāhukos upėje.",
   "mn7:20.1": "Tuomet Palaimintasis ištarė brahmanui Sundarikai Bhāradvājai (šiuos) posmus:",
   "mn7:20.2": "„Bāhuka ir Adhikakka",
+  "mn7:20.3": "Gaya ir Sundarika",
   "mn7:20.8": "Ką Sundarika padarys?",
   "mn7:20.9": "Ką padarys Payāga ar Bāhukos upė?"
 }
