Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -103,6 +103,10 @@
   "mn7:20.1": "Tuomet Palaimintasis ištarė brahmanui Sundarikai Bhāradvājai (šiuos) posmus:",
   "mn7:20.2": "„Bāhuka ir Adhikakka",
   "mn7:20.3": "Gaya ir Sundarika",
+  "mn7:20.4": "Sarasvatī ir Payāga",
+  "mn7:20.5": "ir Bāhumati upė –",
+  "mn7:20.6": "kad ir nuolat nardytų į jas juodus veiksmus (atliekantis) kvailys,",
+  "mn7:20.7": "jis (jų) nenusiplauna.",
   "mn7:20.8": "Ką Sundarika padarys?",
   "mn7:20.9": "Ką padarys Payāga ar Bāhukos upė?"
 }
