Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -108,5 +108,7 @@
   "mn7:20.6": "kad ir nuolat nardytų į jas juodus veiksmus (atliekantis) kvailys,",
   "mn7:20.7": "jis (jų) nenusiplauna.",
   "mn7:20.8": "Ką Sundarika padarys?",
-  "mn7:20.9": "Ką padarys Payāga ar Bāhukos upė?"
+  "mn7:20.9": "Ką padarys Payāga ar Bāhukos upė?",
+  "mn7:20.10": "Blogdario, žiauriabūdžio žmogaus",
+  "mn7:20.11": "negali jos nuplauti piktadario. "
 }
