--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -111,5 +111,6 @@
   "mn7:20.9": "Ką padarys Payāga ar Bāhukos upė?",
   "mn7:20.10": "Blogdario, žiauriabūdžio žmogaus",
   "mn7:20.11": "negali jos nuplauti piktadario. ",
-  "mn7:20.12": "Švarios (širdies) žmogui visada pavasario šventės diena,"
+  "mn7:20.12": "Švarios (širdies) žmogui visada pavasario šventės diena,",
+  "mn7:20.13": " jam visuomet šventą dieną."
 }
