Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -113,5 +113,6 @@
   "mn7:20.11": "negali jos nuplauti piktadario. ",
   "mn7:20.12": "Švarios (širdies) žmogui visada pavasario šventės diena,",
   "mn7:20.13": " jam visuomet šventą dieną.",
-  "mn7:20.14": "Švarios (širdies), tyrų veiksmų, "
+  "mn7:20.14": "Švarios (širdies), tyrų veiksmų, ",
+  "mn7:20.15": "Jis visuomet laikosi įžadų. "
 }
