--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -114,5 +114,6 @@
   "mn7:20.12": "Švarios (širdies) žmogui visada pavasario šventės diena,",
   "mn7:20.13": " jam visuomet šventą dieną.",
   "mn7:20.14": "Švarios (širdies), tyrų veiksmų, ",
-  "mn7:20.15": "Jis visuomet laikosi įžadų. "
+  "mn7:20.15": "Jis visuomet laikosi įžadų. ",
+  "mn7:20.16": "Tai čia, brahmane, kur turėtum praustis,"
 }
