--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -116,5 +116,6 @@
   "mn7:20.14": "Švarios (širdies), tyrų veiksmų, ",
   "mn7:20.15": "Jis visuomet laikosi įžadų. ",
   "mn7:20.16": "Tai čia, brahmane, kur turėtum praustis,",
-  "mn7:20.17": "turėtum dovanoti visoms būtybėms saugumą."
+  "mn7:20.17": "turėtum dovanoti visoms būtybėms saugumą.",
+  "mn7:20.18": "Jei nemeluosi,"
 }
