Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -118,5 +118,6 @@
   "mn7:20.16": "Tai čia, brahmane, kur turėtum praustis,",
   "mn7:20.17": "turėtum dovanoti visoms būtybėms saugumą.",
   "mn7:20.18": "Jei nemeluosi,",
-  "mn7:20.19": "jei nežudysi,"
+  "mn7:20.19": "jei nežudysi,",
+  "mn7:20.20": "jei nevogsi,"
 }
