--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -27,5 +27,6 @@
   "mn1:6.1": "वह वायुको वायु समझता है;",
   "mn1:6.2": "वायुको वायु समझकर खु़दको वायु मानता है, खु़दको वायुमे मानता है, खु़दको वायुसे अलग मानता है, वायु मेरा है ऍसा मानता है, वायुमे आनंद लेता है।",
   "mn1:6.3": "एैसा किस लिये?",
-  "mn1:6.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:6.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:7.1": "वह प्राणीओको प्राणी समझता है;"
 }
