Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -120,5 +120,6 @@
   "mn7:20.18": "Jei nemeluosi,",
   "mn7:20.19": "jei nežudysi,",
   "mn7:20.20": "jei nevogsi,",
-  "mn7:20.21": "jei būsi tikintis ir nešykštus,"
+  "mn7:20.21": "jei būsi tikintis ir nešykštus,",
+  "mn7:20.22": "Ko eitum į Gayą? "
 }
