Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -29,5 +29,6 @@
   "mn1:6.3": "एैसा किस लिये?",
   "mn1:6.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:7.1": "वह प्राणीओको प्राणी समझता है;",
-  "mn1:7.2": "प्राणीओको प्राणी समझकर खु़दको प्राणी मानता है, खु़दको प्राणीओमे मानता है, खु़दको प्राणीओसे अलग मानता है, प्राणी मेरे है ऍसा मानता है, प्राणीओमे आनंद लेता है।"
+  "mn1:7.2": "प्राणीओको प्राणी समझकर खु़दको प्राणी मानता है, खु़दको प्राणीओमे मानता है, खु़दको प्राणीओसे अलग मानता है, प्राणी मेरे है ऍसा मानता है, प्राणीओमे आनंद लेता है।",
+  "mn1:7.3": "एैसा किस लिये?"
 }
