--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -122,5 +122,6 @@
   "mn7:20.20": "jei nevogsi,",
   "mn7:20.21": "jei būsi tikintis ir nešykštus,",
   "mn7:20.22": "Ko eitum į Gayą? ",
-  "mn7:20.23": "Bet koks šulinys bus tau Gaya."
+  "mn7:20.23": "Bet koks šulinys bus tau Gaya.",
+  "mn7:21.1": "Kai tai buvo pasakyta, brahmanas Sundarika Bhāradvāja tarė Palaimintajam:"
 }
