--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -31,5 +31,6 @@
   "mn1:7.1": "वह प्राणीओको प्राणी समझता है;",
   "mn1:7.2": "प्राणीओको प्राणी समझकर खु़दको प्राणी मानता है, खु़दको प्राणीओमे मानता है, खु़दको प्राणीओसे अलग मानता है, प्राणी मेरे है ऍसा मानता है, प्राणीओमे आनंद लेता है।",
   "mn1:7.3": "एैसा किस लिये?",
-  "mn1:7.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:7.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:8.1": "वह देवोको देव समझता है;"
 }
