--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -35,5 +35,6 @@
   "mn1:8.1": "वह देवोको देव समझता है;",
   "mn1:8.2": "देवोको देव समझकर खु़दको देव मानता है, खु़दको देवोमे मानता है, खु़दको देवोसे अलग मानता है, देव मेरे है ऍसा मानता है, देवोमे आनंद लेता है।",
   "mn1:8.3": "एैसा किस लिये?",
-  "mn1:8.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:8.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:9.1": "वह प्रजापतिको प्रजापति समझता है;"
 }
