--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -36,5 +36,6 @@
   "mn1:8.2": "देवोको देव समझकर खु़दको देव मानता है, खु़दको देवोमे मानता है, खु़दको देवोसे अलग मानता है, देव मेरे है ऍसा मानता है, देवोमे आनंद लेता है।",
   "mn1:8.3": "एैसा किस लिये?",
   "mn1:8.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:9.1": "वह प्रजापतिको प्रजापति समझता है;"
+  "mn1:9.1": "वह प्रजापतिको प्रजापति समझता है;",
+  "mn1:9.2": "प्रजापतिको प्रजापति समझकर खु़दको प्रजापति मानता है, खु़दको प्रजापतिमे मानता है, खु़दको प्रजापतिसे अलग मानता है, प्रजापति मेरे है ऍसा मानता है, प्रजापतिमे आनंद लेता है।"
 }
