--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -42,5 +42,6 @@
   "mn1:9.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:10.1": "वह ब्रह्माको ब्रह्मा समझता है;",
   "mn1:10.2": "ब्रह्माको ब्रह्मा समझकर खु़दको ब्रह्मा मानता है, खु़दको ब्रह्मामे मानता है, खु़दको ब्रह्मासे अलग मानता है, ब्रह्मा मेरे है ऍसा मानता है, ब्रह्मामे आनंद लेता है।",
-  "mn1:10.3": "एैसा किस लिये?"
+  "mn1:10.3": "एैसा किस लिये?",
+  "mn1:10.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
 }
