Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -126,5 +126,5 @@
   "mn7:21.1": "Kai tai buvo pasakyta, brahmanas Sundarika Bhāradvāja tarė Palaimintajam:",
   "mn7:21.2": "Nuostabu, Gerbiamas Gotama, nuostabu, Gerbiamas Gotama!",
   "mn7:21.3": "Lygiai kaip, Gerbiamas Gotama, apverstą atstato atgal, ar atskleidžia tai, kas paslėptą, ar parodo kelią pasiklydusiam, ar į tamsą atneša aliejinę lempą tam, kad turintis akis pamatytų formas, lygiai taip Gerbiamas Gotama daugeliu būdų paaiškino Mokymą.",
-  "mn7:21.4": "Aš priimu prieglobstį Gerbiamajame Gotamoje, mokyme ir vienuolių _saṅghoje_."
+  "mn7:21.4": "Aš priimu prieglobstį Gerbiamame Gotamoje, mokyme ir vienuolių _saṅghoje_."
 }
