--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -127,5 +127,6 @@
   "mn7:21.2": "Nuostabu, Gerbiamas Gotama, nuostabu, Gerbiamas Gotama!",
   "mn7:21.3": "Lygiai kaip, Gerbiamas Gotama, apverstą atstato atgal, ar atskleidžia tai, kas paslėptą, ar parodo kelią pasiklydusiam, ar į tamsą atneša aliejinę lempą tam, kad turintis akis pamatytų formas, lygiai taip Gerbiamas Gotama daugeliu būdų paaiškino Mokymą.",
   "mn7:21.4": "Aš priimu prieglobstį Gerbiamame Gotamoje, mokyme ir vienuolių _saṅghoje_.",
-  "mn7:21.5": "Norėčiau gerbiamo Gotamos akivaizdoje žengti priekyn į benamį gyvenimą ir gauti pilną įšventinimą į vienuolius."
+  "mn7:21.5": "Norėčiau gerbiamo Gotamos akivaizdoje žengti priekyn į benamį gyvenimą ir gauti pilną įšventinimą į vienuolius.",
+  "mn7:22.1": "Ir žengė gi brahmanas Sundarika Bhāradvāja priekyn į benamį gyvenimą ir gavo pilną įšventinimą į vienuolius gerbiamo Gotamos akivaizdoje."
 }
