Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -18,7 +18,7 @@
   "mn7:2.9": "Taip, vienuoliai, yra dėl drobės švarumo.",
   "mn7:2.10": "Lygiai gi, vienuoliai, taip, kai protas yra nesuterštas, lauktinas (atgimimas) geroje vietoje.",
   "mn7:3.1": "Ir kokie, vienuoliai, yra proto taršalai?",
-  "mn7:3.2": "Godulys ir neteisingas godumas yra proto taršalas, piktavališkumas yra proto taršalas, pyktis yra proto taršalas, pagieža yra proto taršalas, panieka yra proto taršalas, įžulumas yra proto taršalas, pavydas yra proto taršalas, savininkiškumas yra proto taršalas, apgaulingumas yra proto taršalas, veidmainystė yra proto taršalas, užsispyrimas yra proto taršalas, kietasprandiškumas yra proto taršalas, savimana yra proto taršalas, puikybė yra proto taršalas, akiplėšiškumas yra proto taršalas, nerūpestingumas yra proto taršalas.",
+  "mn7:3.2": "Godulys ir neteisingas godumas yra proto taršalas, piktavališkumas yra proto taršalas, pyktis yra proto taršalas, pagieža yra proto taršalas, panieka yra proto taršalas, įžūlumas yra proto taršalas, pavydas yra proto taršalas, savininkiškumas yra proto taršalas, apgaulingumas yra proto taršalas, veidmainystė yra proto taršalas, užsispyrimas yra proto taršalas, kietasprandiškumas yra proto taršalas, savimana yra proto taršalas, puikybė yra proto taršalas, akiplėšiškumas yra proto taršalas, nerūpestingumas yra proto taršalas.",
   "mn7:4.1": "Vienuoliai, vienuolis supratęs, kad godulys ir neteisėtas godumas yra proto taršalas, atsikrato jo;",
   "mn7:4.2": "supratęs, kad piktavališkumas yra proto taršalas,",
   "mn7:4.3": "atsikrato jo;",
