Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -56,7 +56,7 @@
   "mn7:5.4": "pyktis …",
   "mn7:5.6": "pagieža …",
   "mn7:5.8": "panieka …",
-  "mn7:5.10": "įžulumas …",
+  "mn7:5.10": "įžūlumas …",
   "mn7:5.12": "pavydas …",
   "mn7:5.14": "savininkiškumas …",
   "mn7:5.16": "apgaulingumas …",
