Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -61,7 +61,7 @@
   "mn7:5.14": "savininkiškumas …",
   "mn7:5.16": "apgaulingumas …",
   "mn7:5.18": "veidmainystė …",
-  "mn7:5.20": "užsispirimas …",
+  "mn7:5.20": "užsispyrimas …",
   "mn7:5.22": "kietasprandiškumas …",
   "mn7:5.24": "savimana …",
   "mn7:5.26": "puikybė …",
