Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -79,7 +79,7 @@
   "mn7:9.1": "Jis turi patirtimi grįstą pasitikėjimą Mokymu …",
   "mn7:10.1": "Jis turi patirtimi grįstą pasitikėjimą _saṅgha_, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
   "mn7:10.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia.",
-  "mn7:11.1": "(Pamačius), kad jis yra išmetęs, išvaręs, atsikratęs tiek (teršalų), (nuo tiek) išsilaisvinęs, jį įkvėpia (praktikos) prasmė, jį įkvėpia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
+  "mn7:11.1": "(Pamačius), kad jis yra išmetęs, išvaręs, atsikratęs tiek (teršalų), (nuo tiek) išsilaisvinęs, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
   "mn7:11.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia.",
   "mn7:12.1": "Vienuoliai, jei tokios dorovės, tokių savybių, tokios išminties vienuolis valgo paaukotą maistą, kurį sudaro rinktiniai ryžiai kartu su įvairiomis sriubomis ir padažais, net ir tai jam nėra kliūtis.",
   "mn7:12.2": "Įsivaizduokite, vienuoliai, suterštą, dėmėtą drobę, kuri, (ją išplovus) tyru vandeniu, tampa švari, išvalyta; arba nevalytą auksą, kuris, (jį iškaitinus) krosnyje, tampa švariu, išvalytu.",
