Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -123,7 +123,7 @@
   "mn10:35.3": "Arba jame yra įtvirtinta atida: „Yra protas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:35.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas protą kaip protą.",
   "mn10:36.0.1": "4. Principų kontempliacija",
-  "mn10:36.0.2": "4.1 Кliūčių skyrius",
+  "mn10:36.0.2": "4.1 Kliūčių skyrius",
   "mn10:36.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas principus kaip principus?",
   "mn10:36.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus.",
   "mn10:36.3": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas penkias kliūtis kaip principus?",
