--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -188,7 +188,7 @@
   "mn10:46.2": "tobulo žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio).",
   "mn10:46.3": "Palikime, vienuoliai, septynerius metus.",
   "mn10:46.4": "Bet kas, vienuoliai, kas šešeris metus taip vysto šias keturias atidos sritis …",
-  "mn10:46.5": "penkeris metus …",
+  "mn10:46.5": "penkerius metus …",
   "mn10:46.6": "ketveris metus …",
   "mn10:46.7": "trejus metus …",
   "mn10:46.8": "dvejus metus …",
