Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
@@ -9,7 +9,7 @@
   "mn61:2.4": "paruošė vietą atsisėsti ir pastatė vandens indą kojoms nusiplauti.",
   "mn61:2.5": "Palaimintasis atsisėdo į paruoštą vietą.",
   "mn61:2.6": "Atsisėdęs, nusiplovė kojas,",
-  "mn61:2.7": "o garbingasis Rāhula pagerbė jį ir atsisėdo iš šono.",
+  "mn61:2.7": "o garbingasis Rahula pagerbė jį ir atsisėdo iš šono.",
   "mn61:3.1": "Ir štai Palaimintasis, palikęs truputį vandens inde, kreipėsi į garbingąjį Rahulą:",
   "mn61:3.2": "„Rahula, ar matai šį truputį vandens paliktą inde?”",
   "mn61:3.3": "„Taip, Garbusis.”",
