--- a/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
@@ -14,7 +14,7 @@
   "mn61:3.2": "„Rahula, ar matai šį truputį vandens paliktą inde?”",
   "mn61:3.3": "„Taip, Garbusis.”",
   "mn61:3.4": "„Lygiai gi tiek mažai atsiskyrėliškumo, Rahula, turi nesigėdijantys sąmoningai meluoti.”",
-  "mn61:4.1": "Ir štai Palaimintasis, išpilęs vandens likutį, kreipėsi į garbingąjį Rahulą:",
+  "mn61:4.1": "Ir štai Palaimintasis, išpylęs vandens likutį, kreipėsi į garbingąjį Rahulą:",
   "mn61:4.2": "„Rahula, ar matai šį vandens likutį, kuris buvo išpiltas?”",
   "mn61:4.3": "„Taip, Garbusis.”",
   "mn61:4.4": "„Lygiai gi taip, Rahula, nesigėdijantys sąmoningai meluoti išpilė atsiskyrėliškumą.”",
