--- a/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
@@ -35,7 +35,7 @@
   "mn61:7.7": "Atsižadėjo jis savo gyvybės.",
   "mn61:7.8": "Dabar nėra nieko, ko šis karališkasis dramblys nepadarytų.”",
   "mn61:7.9": "„Lygiai gi taip, Rahula, kai žmogus nesigėdija sąmoningai meluoti, nėra, sakau, nieko blogo, ko jis nepadarytų.",
-  "mn61:7.10": "Todėl, Rāhula, turėtum taip mokytis: „Nesakysiu melo net juokais.”",
+  "mn61:7.10": "Todėl, Rahula, turėtum taip mokytis: „Nesakysiu melo net juokais.”",
   "mn61:8.1": "Kaip manai, Rāhula,",
   "mn61:8.2": "kokia yra veidrodžio paskirtis?”",
   "mn61:8.3": "„Veidrodis skirtas (į save) pasižiūrėti, Garbusis.”",
