--- a/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn61_translation-lt-piyadassi.json
@@ -36,7 +36,7 @@
   "mn61:7.8": "Dabar nėra nieko, ko šis karališkasis dramblys nepadarytų.”",
   "mn61:7.9": "„Lygiai gi taip, Rahula, kai žmogus nesigėdija sąmoningai meluoti, nėra, sakau, nieko blogo, ko jis nepadarytų.",
   "mn61:7.10": "Todėl, Rahula, turėtum taip mokytis: „Nesakysiu melo net juokais.”",
-  "mn61:8.1": "Kaip manai, Rāhula,",
+  "mn61:8.1": "Kaip manai, Rahula,",
   "mn61:8.2": "kokia yra veidrodžio paskirtis?”",
   "mn61:8.3": "„Veidrodis skirtas (į save) pasižiūrėti, Garbusis.”",
   "mn61:8.4": "„Lygiai gi taip, Rahula, ir veiksmas kūnu turėtų būti atliekamas po pakartotinio pasižiūrėjimo, veiksmas kalba turėtų būti atliekamas po pakartotinio pasižiūrėjimo, veiksmas protu turėtų būti atliekamas po pakartotinio pasižiūrėjimo.",
