--- a/translation/lt/piyadassi/sutta/sn/sn1/sn1.1_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn1/sn1.1_translation-lt-piyadassi.json
@@ -14,7 +14,7 @@
   "sn1.1:2.1": "„Daug laiko prabėgo, ir štai aš matau",
   "sn1.1:2.2": "visiškai nurimusį brahmaną.",
   "sn1.1:2.3": "Nei sustodamas, nei verždamasis",
-  "sn1.1:2.4": "jis įveikė kabinimasį į pasaulį.”",
+  "sn1.1:2.4": "jis įveikė kabinimąsi į pasaulį.”",
   "sn1.1:3.1": "Štai ką pasakė dievybė.",
   "sn1.1:3.2": "Mokytojas jai (tyliai) pritarė.",
   "sn1.1:3.3": "Ir štai ta dievybė (suprasdama),",
