--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -1,3 +1,4 @@
 {
-  "sn53.1-12:0.1": "Pagal temą susijusių suttų rinkinys 53"
+  "sn53.1-12:0.1": "Pagal temą susijusių suttų rinkinys 53",
+  "sn53.1-12:0.2": "1. Skyrius apie Ganga ir taip toliau "
 }
