--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -4,5 +4,6 @@
   "sn53.1-12:0.3": "1-12. Džhana ir t.t.",
   "sn53.1-12:1.1": "Savatthyje.",
   "sn53.1-12:1.2": "Ten gi …",
-  "sn53.1-12:1.3": "Keturios, vienuoliai, yra džhanos."
+  "sn53.1-12:1.3": "Keturios, vienuoliai, yra džhanos.",
+  "sn53.1-12:1.4": "Kokios keturios?"
 }
