--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -5,5 +5,6 @@
   "sn53.1-12:1.1": "Savatthyje.",
   "sn53.1-12:1.2": "Ten gi …",
   "sn53.1-12:1.3": "Keturios, vienuoliai, yra džhanos.",
-  "sn53.1-12:1.4": "Kokios keturios?"
+  "sn53.1-12:1.4": "Kokios keturios?",
+  "sn53.1-12:1.5": "Čia vienuoliai, vienuolis, atsiskyręs nuo juslinių malonumų, atsiskyręs nuo nedorų būsenų, pasiekia pirmąją džhaną, kuri yra su pirminiu pritaikymu, ilgalaikiu taikymu, su dėl atsiskyrimo gimusiais žavesiu ir laime, ir būna joje."
 }
