--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -7,5 +7,5 @@
   "sn53.1-12:1.3": "Keturios, vienuoliai, yra džhanos.",
   "sn53.1-12:1.4": "Kokios keturios?",
   "sn53.1-12:1.5": "Čia vienuoliai, vienuolis, atsiskyręs nuo juslinių malonumų, atsiskyręs nuo nedorų būsenų, pasiekia pirmąją džhaną, kuri yra su pirminiu pritaikymu, ilgalaikiu taikymu, su dėl atsiskyrimo gimusiais žavesiu ir laime, ir būna joje.",
-  "sn53.1-12:1.6": "Kai liaunasi pradinis pritaikymas ir tęstinis taikymas, su iš vidaus nurimusiu protu sutelktu į vieną [objektą] jis pasiekia antrąją džhaną, kuri yra be pradinio pritaikymo, be tęstinio taikymo, su dėl sutelkties gimusiais žavesiu ir laime, ir būna joje. "
+  "sn53.1-12:1.6": "Kai liaunasi pirminis pritaikymas ir tęstinis taikymas, būdamas su iš vidaus nurimusiu protu sutelktu į vieną [objektą], jis pasiekia antrąją džhaną, kurioje nėra pirminio pritaikymo ir tęstinio taikymo, bet yra dėl sutelkties gimę žavesys ir laimė, ir būna joje. "
 }
