--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -10,5 +10,6 @@
   "sn53.1-12:1.6": "Kai liaunasi pirminis pritaikymas ir tęstinis taikymas, būdamas su iš vidaus nurimusiu protu sutelktu į vieną [objektą], jis pasiekia antrąją džhaną, kurioje nėra pirminio pritaikymo ir tęstinio taikymo, bet yra dėl sutelkties gimę žavesys ir laimė, ir būna joje. ",
   "sn53.1-12:1.8": "Atsikratęs malonių ir nemalonių (pojūčių), peržengęs ankstesnius laimę ir nusiminimą, jis pasiekia ketvirtąją džhaną, kurioje nėra nemalonių ar malonių (pojūčių), bet yra atidos išgryninta (proto) pusiausvyra, ir būna joje.",
   "sn53.1-12:1.9": "Šios, vienuoliai, yra keturios, džhanos.",
-  "sn53.1-12:2.1": "Panašiai, vienuoliai, kaip Gangos upė linksta link rytų, krypsta link rytų, šlyja link rytų,"
+  "sn53.1-12:2.1": "Panašiai, vienuoliai, kaip Gangos upė linksta link rytų, krypsta link rytų, šlyja link rytų,",
+  "sn53.1-12:2.2": "lygiai gi, vienuoliai, taip ir vienuolis vystantis, praktikuojantis keturias džhanas  linksta link _nibbānos_, krypsta link _nibbānos_, šlyja link _nibbānos_."
 }
