--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -13,5 +13,6 @@
   "sn53.1-12:2.1": "Panašiai, vienuoliai, kaip Gangos upė linksta link rytų, krypsta link rytų, šlyja link rytų,",
   "sn53.1-12:2.2": "lygiai gi, vienuoliai, taip ir vienuolis vystantis, praktikuojantis keturias džhanas  linksta link _nibbānos_, krypsta link _nibbānos_, šlyja link _nibbānos_.",
   "sn53.1-12:2.3": "Ir kaip, vienuoliai, vienuolis vystantis, praktikuojantis keturias džhanas  linksta link _nibbānos_, krypsta link _nibbānos_, šlyja link _nibbānos_?",
-  "sn53.1-12:2.4": "Čia vienuoliai, vienuolis, atsiskyręs nuo juslinių malonumų, atsiskyręs nuo nedorų būsenų, pasiekia pirmąją džhaną, kuri yra su pirminiu pritaikymu, ilgalaikiu taikymu, su dėl atsiskyrimo gimusiais žavesiu ir laime, ir būna joje."
+  "sn53.1-12:2.4": "Čia vienuoliai, vienuolis, atsiskyręs nuo juslinių malonumų, atsiskyręs nuo nedorų būsenų, pasiekia pirmąją džhaną, kuri yra su pirminiu pritaikymu, ilgalaikiu taikymu, su dėl atsiskyrimo gimusiais žavesiu ir laime, ir būna joje.",
+  "sn53.1-12:2.5": "Kai liaunasi pirminis pritaikymas ir tęstinis taikymas …  jis pasiekia antrąją džhaną …"
 }
