--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -20,5 +20,6 @@
   "sn53.1-12:2.7": "jis pasiekia ketvirtąją džhaną, kurioje nėra nemalonių ar malonių (pojūčių), bet yra atidos išgryninta (proto) pusiausvyra, ir būna joje.",
   "sn53.1-12:2.8": "Štai taip, vienuoliai, vienuolis vystantis, praktikuojantis keturias džhanas  linksta link _nibbānos_, krypsta link _nibbānos_, šlyja link _nibbānos_.",
   "sn53.1-12:2.10": "(Likusios skyriaus suttos yra analogiškos šiai. Skiriasi tik upės ir jų kryptys, kaip SN 45.91–102.)",
-  "sn53.1-12:3.1": "Šešios linkstą link rytų,"
+  "sn53.1-12:3.1": "Šešios linkstą link rytų,",
+  "sn53.1-12:3.2": "šešios link vandenino,"
 }
