--- a/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn53/sn53.1-12_translation-lt-piyadassi.json
@@ -22,6 +22,6 @@
   "sn53.1-12:2.10": "(Likusios skyriaus suttos yra analogiškos šiai. Skiriasi tik upės ir jų kryptys, kaip SN 45.91–102.)",
   "sn53.1-12:3.1": "Šešios linkstą link rytų,",
   "sn53.1-12:3.2": "šešios link vandenyno.",
-  "sn53.1-12:3.3": "Kartu du šešetukai sudaro dvyliką,",
+  "sn53.1-12:3.3": "Kartu du šešetukai sudaro dvylika,",
   "sn53.1-12:3.4": "ir taip perskaitomas šis skyrius."
 }
