--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -44,5 +44,6 @@
   "mn1:10.2": "ब्रह्माको ब्रह्मा समझकर खु़दको ब्रह्मा मानता है, खु़दको ब्रह्मामे मानता है, खु़दको ब्रह्मासे अलग मानता है, ब्रह्मा मेरे है ऍसा मानता है, ब्रह्मामे आनंद लेता है।",
   "mn1:10.3": "एैसा किस लिये?",
   "mn1:10.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:11.1": "वह आभासर देवोको आभासर देव समझता है;"
+  "mn1:11.1": "वह आभासर देवोको आभासर देव समझता है;",
+  "mn1:11.2": "आभासर देवोको आभासर देव समझकर खु़दको आभासर देव मानता है, खु़दको आभासर देवोमे मानता है, खु़दको आभासर देवोसे अलग मानता है, आभासर देव मेरे है ऍसा मानता है, आभासर देवोमे आनंद लेता है।"
 }
