--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -50,5 +50,6 @@
   "mn1:11.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:12.1": "संदिप्यमान देवोको संदिप्यमान देव समझता है।",
   "mn1:12.2": "संदिप्यमान देवोको संदिप्यमान देव समझकर खु़दको संदिप्यमान देव मानता है, खु़दको संदिप्यमान देवोमे मानता है, खु़दको संदिप्यमान देवोसे अलग मानता है, संदिप्यमान देव मेरे है ऍसा मानता है, संदिप्यमान देवोमे आनंद लेता है।",
-  "mn1:12.3": "एैसा किस लिये?"
+  "mn1:12.3": "एैसा किस लिये?",
+  "mn1:12.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
 }
