--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -57,5 +57,6 @@
   "mn1:13.3": "एैसा किस लिये?",
   "mn1:13.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
   "mn1:14.1": "अभिभू देवोको अभिभू देव समझता है।",
-  "mn1:14.2": "अभिभू देवोको अभिभू देव समझकर खु़दको अभिभू देव मानता है, खु़दको अभिभू देवोमे मानता है, खु़दको अभिभू देवोसे अलग मानता है, अभिभू देव मेरे है ऍसा मानता है, अभिभू देवोमे आनंद लेता है।"
+  "mn1:14.2": "अभिभू देवोको अभिभू देव समझकर खु़दको अभिभू देव मानता है, खु़दको अभिभू देवोमे मानता है, खु़दको अभिभू देवोसे अलग मानता है, अभिभू देव मेरे है ऍसा मानता है, अभिभू देवोमे आनंद लेता है।",
+  "mn1:14.3": "एैसा किस लिये?"
 }
