--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -60,5 +60,6 @@
   "mn1:14.2": "अभिभू देवोको अभिभू देव समझकर खु़दको अभिभू देव मानता है, खु़दको अभिभू देवोमे मानता है, खु़दको अभिभू देवोसे अलग मानता है, अभिभू देव मेरे है ऍसा मानता है, अभिभू देवोमे आनंद लेता है।",
   "mn1:14.3": "एैसा किस लिये?",
   "mn1:14.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:15.1": "अनंत आकाशके मनोस्थानको अनंत आकाशका मनोस्थान समझता है।"
+  "mn1:15.1": "अनंत आकाशके मनोस्थानको अनंत आकाशका मनोस्थान समझता है।",
+  "mn1:15.2": "अनंत आकाशके मनोस्थानको अनंत आकाशका मनोस्थान समझकर खु़दको अनंत आकाशका मनोस्थान मानता है, खु़दको अनंत आकाशके मनोस्थानमे मानता है, खु़दको अनंत आकाशके मनोस्थानसे अलग मानता है, अनंत आकाशका मनोस्थान मेरा है ऍसा मानता है, अनंत आकाशके मनोस्थानमे आनंद लेता है।"
 }
