--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -107,7 +107,7 @@
   "mn10:34.4": "supranta protą su neapykanta kaip protą su neapykanta;",
   "mn10:34.5": "supranta protą be neapykantos kaip protą be neapykantos;",
   "mn10:34.6": "supranta protą su klydimu kaip protą su klydimu;",
-  "mn10:34.7": "supranta protą be klydimo kaip protą be klydimo;",
+  "mn10:34.7": "supranta protą be paklydimo kaip protą be paklydimo;",
   "mn10:34.8": "supranta suvaržytą protą kaip suvaržytą protą;",
   "mn10:34.9": "supranta išsiblaškiusį protą kaip išsiblaškiusį protą;",
   "mn10:34.10": "supranta didingą protą kaip didingą protą;",
