Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -106,7 +106,7 @@
   "mn10:34.3": "supranta protą be geidulio kaip protą be geidulio;",
   "mn10:34.4": "supranta protą su neapykanta kaip protą su neapykanta;",
   "mn10:34.5": "supranta protą be neapykantos kaip protą be neapykantos;",
-  "mn10:34.6": "supranta protą su klydimu kaip protą su klydimu;",
+  "mn10:34.6": "supranta protą su paklydimu kaip protą su paklydimu;",
   "mn10:34.7": "supranta protą be paklydimo kaip protą be paklydimo;",
   "mn10:34.8": "supranta suvaržytą protą kaip suvaržytą protą;",
   "mn10:34.9": "supranta išsiblaškiusį protą kaip išsiblaškiusį protą;",
