--- a/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
@@ -67,7 +67,7 @@
   "mn20:8.2": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
   "mn20:8.3": "Tiriant tų minčių grėsmę, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir klydimu, jį apleidžia, baigiasi.",
   "mn20:8.4": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
-  "mn20:8.5": "Stengiantis pamiršti tas mintis ir nekreipti į jas dėmesio, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir klydimu, jį apleidžia, baigiasi.",
+  "mn20:8.5": "Stengiantis pamiršti tas mintis ir nekreipti į jas dėmesio, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu, jį apleidžia, baigiasi.",
   "mn20:8.6": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
   "mn20:8.7": "Skiriant dėmesį tų minčių formavimosi nuraminimui, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu, jį apleidžia, baigiasi.",
   "mn20:8.8": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
