--- a/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn20_translation-lt-piyadassi.json
@@ -54,7 +54,7 @@
   "mn20:6.20": "Ir jis prigultų.",
   "mn20:6.21": "Taip, vienuoliai, tas žmogus vieną po kitos pakeistų grubesnę pozą subtilesne.",
   "mn20:6.22": "lygiai taip, vienuoliai …",
-  "mn20:7.1": "Jei, vienuoliai, vienuoliui skiriant dėmesį tų minčių formavimosi nuraminimui, vis vien kyla blogos nedoros mintys, susijusios su troškimu, neapykanta ir klydimu,",
+  "mn20:7.1": "Jei, vienuoliai, vienuoliui skiriant dėmesį tų minčių formavimosi nuraminimui, vis vien kyla blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu,",
   "mn20:7.2": "tas vienuolis turėtų, sukandęs dantis ir prispaudęs liežuvį prie gomurio, protu tvirtai laikyti, suvaržyti, maitoti protą.",
   "mn20:7.3": "Jam sukandus dantis ir prispaudus liežuvį prie gomurio, protu tvirtai laikant, varžant, maitojant protą, bet kokios blogos nedoros mintys, susijusios su troškimu, neapykanta ir paklydimu, jį apleidžia, baigiasi.",
   "mn20:7.4": "Jų atsikračius, jo protas nurimsta, nutyla, atsiriboja ir susitelkia.",
