--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -17,7 +17,7 @@
   "sn56.11:4.3": "O gi, vienuoliai, štai taurinanti kančios šaltinio tiesa:",
   "sn56.11:4.4": "tai yra tas troškimas, kuris yra su džiugesiu ir aistra ir veda į pakartotiną būtį, randantis pasitenkinimą tai čia, tai ten. O būtent,",
   "sn56.11:4.5": "juslinių malonumų troškimas, būties troškimas, nebūties troškimas.",
-  "sn56.11:4.6": "O gi, vienuoliai, štai taurinanti kančios pabaigos tiesa:",
+  "sn56.11:4.6": "O gi, vienuoliai, štai taurinanti kančios baigties tiesa:",
   "sn56.11:4.7": "tai yra visiškas to troškimo išblėsimas, pabaiga, atmetimas, atsisakymas, išsilaisvinimas (nuo jo), (jo) nepriėmimas.",
   "sn56.11:4.8": "O gi, vienuoliai, štai taurinanti kelio vedančio į kančios pabaigą tiesa:",
   "sn56.11:4.9": "tai štai šis taurinantis aštuonialypis kelias, o būtent:",
