Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -28,7 +28,7 @@
   "sn56.11:6.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios šaltinio tiesa.”",
   "sn56.11:6.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios šaltinio tiesa turi būti pašalinta.”",
   "sn56.11:6.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios šaltinio tiesa yra pašalinta.”",
-  "sn56.11:7.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios pabaigos tiesa.”",
+  "sn56.11:7.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios baigties tiesa.”",
   "sn56.11:7.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios pabaigos tiesa turi būti pažinta.”",
   "sn56.11:7.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios pabaigos tiesa yra pažinta.”",
   "sn56.11:8.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kelio vedančio į kančios pabaigą tiesa.”",
