Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -98,7 +98,7 @@
   "mn10:32.10": "jausdamas dvasinį nei nemalonų, nei malonų jausmo toną, supranta: „Jaučiu dvasinį nei nemalonų, nei malonų jausmo toną.“",
   "mn10:33.1": "Taip, jis gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus viduje, arba gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus išorėje, arba gyvena, kontempliuodamas jausmo tonus kaip jausmo tonus ir viduje, ir išorėje.",
   "mn10:33.2": "Jis stebi jausmo tonuose kilimo prigimtį, arba stebi jausmo tonuose nykimo prigimtį, arba stebi jausmo tonuose ir kilimo, ir nykimo prigimtį.",
-  "mn10:33.3": "Arba jame yra įtvirtinta atida: „Yra jausmo tonas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
+  "mn10:33.3": "Arba jame yra įtvirtinta atida: „Yra jausmo tonas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir nieko pasaulyje nesisavina.",
   "mn10:33.4": "Taip irgi, vienuoliai, vienuolis gyvena kontempliuodamas jausmo tonus kaip jausmo tonus.",
   "mn10:34.0": "3. Proto kontempliacija",
   "mn10:34.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas protą kaip protą?",
