Translations by Piyadassii to translation/lt/piyadassi/sutta/sn/sn35/sn35.28_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/sn/sn35/sn35.28_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn35/sn35.28_translation-lt-piyadassi.json
@@ -20,5 +20,5 @@
   "sn35.28:1.17": "Jis supranta, kad panaikintas (kitas) gimimas, nugyventas šventas gyvenimas, padaryta tai, kas turi būti padaryta, po šios būties daugiau nebus nieko.",
   "sn35.28:2.1": "Štai ką pasakė Palaimintasis.",
   "sn35.28:2.2": "Patenkinti tie vienuoliai džiaugėsi Palaimintojo žodžiais.",
-  "sn35.28:2.3": "Ir tuo pat metu, kai buvo išdėstomas šis išaiškinimas, to tūkstančio vienuolių protai dėl neprisirišimo išsilaisvino nuo ydų."
+  "sn35.28:2.3": "Ir tuo pat metu, kai buvo išdėstomas šis išaiškinimas, to tūkstančio vienuolių protai dėl nesisavinimo išsilaisvino nuo ydų."
 }
