Translations by vngmar to translation/pt/blurb/sn-blurbs_translation-pt.json

--- a/translation/pt/blurb/sn-blurbs_translation-pt.json
+++ b/translation/pt/blurb/sn-blurbs_translation-pt.json
@@ -121,5 +121,6 @@
   "sn-blurbs:sn3.6": "No mundo, há poucos que não se tornam negligentes e complacentes quando obtêm luxos materiais.",
   "sn-blurbs:sn3.7": "O Rei Pasenadi lamenta a alta frequência com que vê pessoas mentindo por causa de prazeres sensuais em sua sala de julgamento.",
   "sn-blurbs:sn3.8": "O Rei Pasenadi pergunta à Rainha Mallikā quem é a pessoa mais querida. Ambos concordam que a pessoa mais querida somos nós e o Buda concorda.",
-  "sn-blurbs:sn3.9": "Um grande sacrifício que envolvia a matança de muitos animais fora preparado para o Rei Pasenadi. O Buda condena tais sacrifícios e diz que um sacrifício frutífero envolve uma oferta sem culpa e sem danos."
+  "sn-blurbs:sn3.9": "Um grande sacrifício que envolvia a matança de muitos animais fora preparado para o Rei Pasenadi. O Buda condena tais sacrifícios e diz que um sacrifício frutífero envolve uma oferta sem culpa e sem danos.",
+  "sn-blurbs:sn3.10": "É relatado ao Buda a ocasião em que muitas pessoas são presas pelo Rei Pasenadi."
 }
