Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn9_translation-it-giovannizappa.json
@@ -105,7 +105,7 @@
   "mn9:36-38.6": "Ma cos'è la voglia? Qual'è la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione?",
   "mn9:36-38.7": "Ci sono queste sei classi di voglie.",
   "mn9:36-38.8": "Voglia di viste, suoni, odori, sapori, tatti, e pensieri.",
-  "mn9:36-38.9": "La voglia origina dalla sensazione. La voglia cessa quando la sensazione cessa. La pratica che porta alla cessazione della voglia è semplicemente questo nobile ottuplice percorso ...”",
+  "mn9:36-38.9": "La sete origina dalla sensazione. La sete cessa quando la sensazione cessa. La pratica che porta alla cessazione della voglia è semplicemente questo nobile ottuplice percorso ...”",
   "mn9:40-42.2": "“Potrebbe esserci un altro modo di descrivere un discepolo nobile?”",
   "mn9:40-42.3": "“Può esserci, Fratelli.",
   "mn9:40-42.4": "Un discepolo nobile comprende la sensazione, la sua origine, la sua cessazione, e la pratica che porta alla sua cessazione.",
