Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn82_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn82_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn82_translation-it-giovannizappa.json
@@ -254,7 +254,7 @@
   "mn82:36.4": "Questo è il secondo riepilogo.",
   "mn82:36.5": "‘Il mondo non ha proprietario—bisogna lasciarsi tutto alle spalle e andarsene.’",
   "mn82:36.6": "Questo è il terzo riepilogo.",
-  "mn82:36.7": "‘Il mondo è desideroso, insaziabile, schiavo della voglia.’",
+  "mn82:36.7": "‘Il mondo è desideroso, insaziabile, schiavo della sete.’",
   "mn82:36.8": "Questo è il quarto riepilogo.",
   "mn82:37.1": "Il Beato che sà e vede, il perfetto, il Buddha completamente risvegliato ha insegnato questi quattro riepiloghi dell'insegnamento da recitare. È stato dopo che ho capito e visto e sentito questi che ho lasciato la vita laica per quella ascetica.”",
   "mn82:38.1": "“‘Il mondo è instabile e viene spazzato via.’",
@@ -306,7 +306,7 @@
   "mn82:40.14": "“È incredibile, Maestro Raṭṭhapāla, è strabiliante,",
   "mn82:40.15": "quanto questo sia stato ben detto dal Buddha.",
   "mn82:40.17": "Poiché il mondo davvero non ha proprietario—bisogna lasciarsi tutto alle spalle e andarsene.",
-  "mn82:41.1": "Lei ha anche detto questo: ‘Il mondo è desideroso, insaziabile, schiavo della voglia.’",
+  "mn82:41.1": "Lei ha anche detto questo: ‘Il mondo è desideroso, insaziabile, schiavo della sete.’",
   "mn82:41.3": "Come posso interpretare il significato di questa frase?”",
   "mn82:41.4": "“Cosa ne pensi, grande re?",
   "mn82:41.5": "Abiti nella prosperosa terra di Kuru?”",
@@ -332,11 +332,11 @@
   "mn82:41.32": "Cosa faresti?”",
   "mn82:41.33": "“Lo conquisterei e vivrei lì.”",
   "mn82:41.34": "“Questo è ciò a cui il Buddha si riferiva quando ha detto:",
-  "mn82:41.35": "‘Il mondo è desideroso, insaziabile, schiavo della voglia.’",
+  "mn82:41.35": "‘Il mondo è desideroso, insaziabile, schiavo della sete.’",
   "mn82:41.36": "Ed è stato dopo che ho capito e visto e sentito questo che ho lasciato la vita laica per quella ascetica.”",
   "mn82:41.37": "“È incredibile, Maestro Raṭṭhapāla, è strabiliante,",
   "mn82:41.38": "quanto questo sia stato ben detto dal Buddha.",
-  "mn82:41.40": "Poiché il mondo è davvero desideroso, insaziabile, schiavo della voglia.”",
+  "mn82:41.40": "Poiché il mondo è davvero desideroso, insaziabile, schiavo della sete.”",
   "mn82:42.1": "Questo è ciò che il Venerabile Raṭṭhapāla disse.",
   "mn82:42.2": "Poi continuò:",
   "mn82:42.3": "“Vedo gente ricca nel mondo che,",
@@ -348,7 +348,7 @@
   "mn82:42.9": "insoddisfatto della sponda vicina dell'oceano,",
   "mn82:42.10": "brama ancora la sponda lontana.",
   "mn82:42.11": "Non solo il re, ma anche gli altri,",
-  "mn82:42.12": "raggiungono la morte non liberi dalla voglia.",
+  "mn82:42.12": "raggiungono la morte non liberi dalla sete.",
   "mn82:42.13": "Lasciano il corpo ancora volendo,",
   "mn82:42.14": "poiché in questo mondo i piaceri dei sensi non soddisfano mai.",
   "mn82:42.15": "I parenti si lamentano, i loro capelli scompigliati,",
