Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -179,7 +179,7 @@
   "dn34:1.6.9": "They are discerning and endowed with the discernment that goes to arising and passing, that is noble, penetrative, and goes rightly to the destruction of suffering.",
   "dn34:1.6.10": "These are the five things that are of great help.",
   "dn34:1.6.11": "What are the five things that are to be cultivated?",
-  "dn34:1.6.12": "The five-fold Right Collectedness—",
+  "dn34:1.6.12": "The fivefold Right Collectedness—",
   "dn34:1.6.13": "Suffusion with joy; suffusion with pleasure; suffusion with mind; suffusion with light; the ground of investigation.",
   "dn34:1.6.14": "These are the five things that are to be cultivated.",
   "dn34:1.6.15": "What are the five things that are to be understood accurately?",
