Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -661,7 +661,7 @@
   "dn34:2.2.3": "The nine mental states rooted in mature assessment. For one assessing maturely (XXXIS IT CORRECT THAT THIS \"manasikaroto\" IS A GENATIVE PRESENT PARTICIPLE?XXX), gladness arises. For one who is glad, joy arises. For one of joyful mind, the body relaxes. A relaxed body experiences pleasure. The mind of one experiencing pleasure becomes collected. When the mind is settled, one knows and see accurately. Knowing and seeing accurately, one becomes disillusioned. Becoming disillusioned, one becomes dispassionate (XXXIS IT OKAY TO TRANSLATE \"nibbindati\" AND \"virajjati\" USING \"becoming\" AS HERE? WHY DO THESE ENGLISH WORDS SEEM TO NEED IT?XXX). From dispassion, one is released.",
   "dn34:2.2.4": "These are the nine things that are of great help.",
   "dn34:2.2.5": "What are the nine things that are to be cultivated?",
-  "dn34:2.2.6": "The nine factors of purity connected with exertion. (XXXPERHAPS LITERALLY \"nine factors connected with exertion for the purpose of purity\" (DATIVE OF AIM/PURPOSE)XXX)",
+  "dn34:2.2.6": "The nine factors of purity connected with exertion—(XXXPERHAPS LITERALLY \"nine factors connected with exertion for the purpose of purity\" (DATIVE OF AIM/PURPOSE)XXX)",
   "dn34:2.2.7": "Purity through virtue; purity through mind; purity through view; purity through overcoming doubt; purity through knowing and seeing what is the path and what isn't; purity through knowing and seeing the practice; purity through knowledge and vision; purity through discernment; purity through freedom.",
   "dn34:2.2.8": "These are the nine things that are to be cultivated.",
   "dn34:2.2.9": "What are the nine things that are to be understood accurately?",
