Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.3_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn1.3:0.1": "Verbundene Lehrreden 1 ",
   "sn1.3:0.2": "1. Ein Schilfrohr ",
-  "sn1.3:0.3": "3. Geführt "
+  "sn1.3:0.3": "3. Geführt ",
+  "sn1.3:1.1": "In Sāvatthī. "
 }
