Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -669,5 +669,6 @@
   "dn34:2.2.11": "There are beings of diverse bodies and diverse perceptions, namely: humans, some angels, and some beings of fallen birth.",
   "dn34:2.2.12": "This is the first abode of beings.",
   "dn34:2.2.13": "There are beings of diverse bodies and unified perception, namely: angels of the gods' retinue reborn there from the first [jhāna].",
-  "dn34:2.2.14": "This is the second abode of beings."
+  "dn34:2.2.14": "This is the second abode of beings.",
+  "dn34:2.2.15": "There are beings of unified bodies and unified perception, namely: the radiant angels."
 }
